# mystripes

./: .gitignore  CONTRIBUTING.md  LICENSE-graphics-CC0.md  NOTICE.md  README.md  api.py  app.py  pixi.toml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  idea_or_wish.md
.github/workflows/: ci.yml  release.yml
.streamlit/: secrets.toml.example
mystripes/: __init__.py  api.py  cds.py  climate_stack.py  cookie_consent.py  geocoding.py  gistemp.py  models.py  notices.py  plotting.py  processing.py  refresh.py  storyline_cookie_component.py  storylines.py  twcr.py
mystripes/components/storyline_cookie_store/: index.html
mystrips/: __init__.py  api.py  cds.py  geocoding.py  plotting.py  processing.py
personal_warming_stripes/: __init__.py  cds.py  geocoding.py  models.py  notices.py  plotting.py  processing.py
tests/: test_api.py  test_cds_config.py  test_cds_errors.py  test_cds_monthly.py  test_climate_stack.py  test_cookie_consent.py  test_geocoding.py  test_gistemp.py  test_processing.py  test_refresh.py  test_storylines.py  test_twcr.py
