[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mystrips"
version = "0.1.0"
description = "Create climate strips from place-based timelines."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["climate", "warming-stripes", "visualization", "streamlit", "era5"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "cdsapi>=0.7.7",
  "matplotlib>=3.8",
  "netCDF4>=1.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.32",
  "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["mystrips"]
